@@ -1,3 +1,7 @@
+2001-01-28  Richard Kreckel  <kreckel@ginac.de>
+
+        * include/cln/number.h (cl_as_N): Remove bogus comment.
+
 2001-01-22  Richard Kreckel  <kreckel@ginac.de>
 
         * configure.in: Make build in separate builddir possible (again).
